# marketplace

./: .gitignore  README.md  pyproject.toml
experiments/: batch_normal.py  batch_sizes.py  beautiful_cifar.py  beautiful_mnist.py  beautiful_mnist_v2.py  cl_augment.py  cl_balance_labels.py  cl_digit_exp.py  cl_exp.py  cl_fashion_exp.py  continual_learning.py  continual_learning_fashion.py  cross_mixing.py  forward_pass.py  long_run.py  low_precision.py  lr.py  lr_scale.py  lr_vendor16.py  market_depth.py  marketplace_structure.py  meta_lr.py  mnist_backprop_cmp.py  mp_structure.py  no_cross_mixing.py  resnet18.py  scaling.py  unit_vector_mode.py  utils.py
marketplace/: continual_learning.py  delta_nn.py  main.py  multi_nn.py  nn.py  optimizers.py  random.py  training.py  utils.py
plot/: compare_with_all_at_once.py  plot_3d.py  plot_continual_learning.py  plot_continual_learning_fashion.py
scripts/: rewrite_safetensor.py
tests/: test_optimizers.py  test_random.py  test_training.py
