[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "tinygrad>=0.10.3",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git", rev="0ce0f5101028e8b5ca70eb8cf8241b7baf945e45" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

