[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "mlflow>=3.2.0",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
    "tinygrad>=0.10.3",
    "tinyloader>=0.1.3",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git", rev="0ce0f5101028e8b5ca70eb8cf8241b7baf945e45" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
]

