[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "mlflow>=3.2.0",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
    "tinygrad>=0.11.0",
    "tinyloader>=0.1.3",
]

[dependency-groups]
dev = [
    "capstone>=5.0.6",
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
]

